--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixelart Painter</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="center"><h1>Pixelart Painter!</h1></div>
+    <div class="center"><canvas></canvas></div>
     <script src="/script.js"></script>
 </body>
 </html>
