--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <div class="center"><h1>Pixelart Painter!</h1></div>
-
+    <div class="slidecontainer">
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+      </div>
     <div class="center">
         <canvas></canvas>
     </div>
