--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <div id="grid-item12"class="grid-item"></div>
                 </div>
                 <input type="range" min="1" max="100" value="50" class="slider">
+                <div id="dimensions">
+                    <p id="dimensionsText">750x750</p>
+                </div>
             </div>
         </div>
     </div>
