slider with dimensions

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@1,600&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gantari&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="center"><h1>Pixelart Painter!</h1></div>
@@ -40,9 +44,9 @@
                     <div id="grid-item11"class="grid-item"></div>
                     <div id="grid-item12"class="grid-item"></div>
                 </div>
-                <input type="range" min="1" max="100" value="50" class="slider">
+                <input type="range" min="10" max="75" value="25" id="slider">
                 <div id="dimensions">
-                    <p id="dimensionsText">750x750</p>
+                    <p id="dimensionsText">25x25</p>
                 </div>
             </div>
         </div>
