--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@
                     <div id="grid-item11"class="grid-item"></div>
                     <div id="grid-item12"class="grid-item"></div>
                 </div>
-                <input type="range" min="10" max="75" value="25" id="slider">
+                
                 <div id="dimensions">
                     <p id="dimensionsText">25x25</p>
                 </div>
+                <input type="range" min="10" max="75" value="25" id="slider">
+                <div id="lineThicknesDiv">
+                    <p>Line Thicknes:</p>
+                    <input type="text" placeholder="1" id="lineThicknes">
+                </div>
+                
             </div>
         </div>
     </div>
